[fix] website spacing for icon

--- a/src/beauty.css
+++ b/src/beauty.css
@@ -116,11 +116,48 @@ a:active {
     border: 2px solid white;
 }
 
-.language_icon {
+.icon_1 {
 	position: absolute;
 	margin-left: auto;
 	margin-right: auto;
-	left: 25%;
+	left: 20%;
+	right: 0;
+	top: 100%;
+}
+
+
+.icon_2 {
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 32%;
+	right: 0;
+	top: 100%;
+}
+
+.icon_3 {
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 44%;
+	right: 0;
+	top: 100%;
+}
+
+.icon_4 {
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 56%;
+	right: 0;
+	top: 100%;
+}
+
+.icon_5 {
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 68%;
 	right: 0;
 	top: 100%;
 }
